# msdDetector

./: .gitignore  CMakeLists.txt  README
cmake/: macros.cmake
cmake/msdDetector/: CMakeLists.txt
include/: msd.h  msdImgPyramid.h
src/: msd.cpp  msdImgPyramid.cpp  msdTest.cpp
